modular tests: compose module path if test module contains module-info (IDEA-171419)
GitOrigin-RevId: 73b09af1b91bb53f64bc97edeb9a0121eed8739f